--- a/index.css
+++ b/index.css
@@ -3,3 +3,50 @@
     box-sizing: border-box;
 }
 
+.page__container {
+    display: flex;
+    height: 100vh;
+    width: 100%
+}
+
+.left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0.5;
+    background-image: url('https://i.ytimg.com/vi/ATVGl9wOJsM/maxresdefault.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transition: 1s ease-in ;
+}
+
+.left-hover {
+    flex: 0.8;
+    transition: 1s ease-in ;
+}
+
+.right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex: 0.5;
+    background-image: url('https://cdn.mos.cms.futurecdn.net/QqmwSW6cQYLG8WHFfE3JmE-1200-80.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    transition: 1s ease-in ;
+}
+
+.right-hover {
+    flex: 0.8;
+    transition: 1s ease-in ;
+}
+
+.button {
+    outline: none;
+    width: 20%;
+    border: 1px white solid;
+    padding: 5px;
+    cursor: pointer;
+}
